# classyfire_cli

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
classyfire_cli/: cli.py
classyfire_cli/src/: api.py  batch.py  utils.py
src/: batch.py
